--- a/serverless.yml
+++ b/serverless.yml
@@ -19,23 +19,14 @@ provider:
   apiKeys:
     - free:
         - MyFreeAPIKey
-    # - paid:
-    #     - MyPaidAPIKey
   usagePlan:
     - free:
-        quota: # after 100 requests per month, it won't work
+        quota:
           limit: 100
           period: MONTH
-        throttle: # 5 requests per second and it can go upto 10
+        throttle:
           rateLimit: 5
           burstLimit: 10
-    # - paid:
-    #     quota:
-    #       limit: 1000
-    #       period: MONTH
-    #     throttle:
-    #       rateLimit: 10
-    #       burstLimit: 50
 
 plugins:
   - serverless-s3-sync
@@ -105,3 +96,7 @@ resources:
           - AttributeName: ID
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
+
+
+
+
